--- a/Assets/style.css
+++ b/Assets/style.css
@@ -174,6 +174,7 @@ p {
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    color:#ffffff;
 }
 
 .footer h2 {
@@ -181,13 +182,13 @@ p {
 }
 
 @media screen and (min-width: 768px) {
-    /* on tablets, set columns to only be 50% of the width and not grow */
+    /* Media for tablets */
     .content {
       flex: 50%;
       
     }
   
-    /* select the last child to grow to full width if it has space to grow */
+    
     .content:last-child {
       flex-grow: 1;
     }
